Fix excessive height compared to viewport on mobile browsers

--- a/src/goupile/client/goupile.css
+++ b/src/goupile/client/goupile.css
@@ -4,7 +4,9 @@
 
 /* -------------------- Layout and basic elements -------------------- */
 
+html { height: 100%; }
 body {
+    height: 100%;
     margin: 0;
     padding: 0;
     background: #f8f8f8;
@@ -14,7 +16,7 @@ body {
 #gp_all {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
 }
 @media (pointer: coarse) {
     body { font-size: 16px; }
